<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.buaair.carsmart.MainActivity" >

    <item
        android:icon="@drawable/menu_speed"
        android:showAsAction="always|withText"
        android:title="@string/speed_title">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_speed_1"
                    android:title="@string/speed_1"/>
                <item
                    android:id="@+id/menu_speed_2"
                    android:title="@string/speed_2"/>
                <item
                    android:id="@+id/menu_speed_3"
                    android:checked="true"
                    android:title="@string/speed_3"/>
                <item
                    android:id="@+id/menu_speed_4"
                    android:title="@string/speed_4"/>
                <item
                    android:id="@+id/menu_speed_5"
                    android:title="@string/speed_5"/>
            </group>
        </menu>
    </item>
    <item
        android:icon="@drawable/menu_time"
        android:showAsAction="ifRoom|withText"
        android:title="@string/time_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_time_today"
                    android:checked="true"
                    android:title="@string/time_today"/>
                <item
                    android:id="@+id/menu_time_yesterday"
                    android:title="@string/time_yesterday"/>
                <item
                    android:id="@+id/menu_time_before_yesterday"
                    android:title="@string/time_before_yesterday"/>
                <item
                    android:id="@+id/menu_time_a_hour_before"
                    android:title="@string/time_a_hour_before"/>
                <item
                    android:id="@+id/menu_time_custom"
                    android:title="@string/time_custom"/>
            </group>
        </menu>
    </item>

</menu>